REGRESSION (~244100) [Mac WK2 Debug] Layout Test http/tests/resourceLoadStatistics/prune-statistics.html is a flaky failure (197285) https://bugs.webkit.org/show_bug.cgi?id=197285 <rdar://problem/50208370>

Patch by Kate Cheney <katherine_cheney@apple.com> on 2019-10-15
Reviewed by Chris Dumez.

Source/WebKit:

This patch fixes a flaky failure which was being caused by other
resourceLoadStatistics tests scheduling processing checks which
were called during execution of prune-statistics.html.
Now, any pending processing checks are cancelled between tests.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::scheduleClearInMemoryAndPersistent):

LayoutTests:

Remove a "skipped" expectation for a previously flaky test that should
be fixed by this patch.
* platform/mac-wk2/TestExpectations:

Canonical link: https://commits.webkit.org/216452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251176 268f45cc-cd09-0410-ab3c-d52691b4dbfc